samples/_failures_safe/1761627456_e34103_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65766291.c:178: error: expected ‘;’, ‘,’ or ‘)’ at end of input
